k8s/containers/pi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi
spec:
  selector:
    app: pi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  sessionAffinity: None
  type: ClusterIP
